Changes with Apache 1.3.25

  *) Correct a timeout problem within proxy which would force long
     or slow POST requests to close after 300 seconds.
     [Martin Lichtin <martin@lichtin.net>, Brian Bothwell
     <brian.bothwell@wisdomtools.com>]

  *) Add support for dechunking chunked responses in proxy.
     [Graham Leggett]

  *) Made AB's use of the Host: header rfc2616 compliant
     by Taisuke Yamada <tai@iij.ad.jp> [Dirl-Willem van Gulik].
     
  *) Update the Redhat Layout to match Redhat version 7. PR BZ-7422
     [Joe Orton] 

  *) Add some popular types to the mime magic file.  PR 7730.
     [Linus Walleij <triad@df.lth.se>, Justin Erenkrantz]

  *) Tighten up the overridden-Server-header bugfix in the proxy, by
     only overriding if the request is a proxy request. It has been
     pointed out that the previous fix allows CGIs and modules to
     override the Server header, which is change to previous behavior.
     [Graham Leggett, Joshua Slive]

  *) Another fix for the multiple-cookie header bug in proxy. With some
     luck this bug is actually now dead. [Graham Leggett]

Changes with Apache 1.3.24

  *) Fixed a segfault in mod_include when #if, #elif, #else, or #endif
     directives were improperly terminated.  [Cliff Woolley]

  *) Introduce proper escaping of command.com and cmd.exe for Win32.
     These patches close vulnerability CAN-2002-0061, identified and
     reported by Ory Segal <ory.segal@sanctuminc>, by which any CGI
     invocation of .bat or .cmd files could compromise the system 
     when the .bat or .cmd was parsed the query args as an argument 
     to either cmd.exe /c or command.com /c.  [William Rowe]

  *) Add % and \r [C/R] to the dangerous Win32 shell character list.
     Retain the Unix sh escapes list for compatibility.
     [William Rowe]

  *) Pass the command line to the cmd.exe /c interpreter double quoted.
     This fixes a bug that CGI args ending in a double-quote would 